# k8s-aiops-observability

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  main.py  pyproject.toml
k8s/cluster/: kind-config.yaml
k8s/manifests/: api-service.yaml  namespace.yaml  stress-worker.yaml  web-frontend.yaml
k8s/monitoring/: prometheus-values.yaml  slo-rules.yaml
k8s/monitoring/dashboards/: aiops-main.json
notebooks/: 01_eda.ipynb  02_model_evaluation.ipynb
scripts/: demo.sh  inject_anomaly.sh  load_generator.sh  port_forward.sh
src/collector/: __init__.py  main.py  preprocessor.py  prometheus_client.py  queries.py
src/detector/: __init__.py  features.py  realtime.py  trainer.py
